force-app/main/default/objects/Lot__c/Lot__c.object-meta.xml
<CustomObject>
    <description>Represents an individual lot/address within a community</description>
    <label>Lot</label>
    <nameField>
        <label>Lot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>