force-app/main/default/objects/Lot__c/fields/Active_WO_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_WO_Count__c</fullName>
    <description>Open Work Order count for this lot. Maintained by automation or integration until the Lot relationship is converted to native roll-up capable master-detail.</description>
    <label>Open Work Orders</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>