force-app/main/default/objects/Lot__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>