force-app/main/default/objects/Lot__c/fields/Aqua_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Add_On__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Aqua Add-On</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>