force-app/main/default/objects/Lot__c/fields/Aqua_Installed__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when the irrigation system has been installed at this lot. Triggers Aqua Check ticket generation and activates the lot for the Aqua pickup queue.</description>
    <label>Aqua Installed</label>
    <type>Checkbox</type>
</CustomField>