force-app/main/default/objects/Lot__c/fields/Aqua_Pickup_Created__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Pickup_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked after the Aqua pickup ticket has been created for a closed Aqua lot.</description>
    <label>Aqua Pickup Created</label>
    <type>Checkbox</type>
</CustomField>