force-app/main/default/objects/Lot__c/fields/Aqua_Pickup_Due__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Pickup_Due__c</fullName>
    <formula>AND(ISPICKVAL(Lot_Status__c, &quot;Closed&quot;), OR(Aqua_Installed__c, Aqua_Add_On__c &gt; 0), NOT(Aqua_Pickup_Created__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aqua Pickup Due</label>
    <type>Checkbox</type>
</CustomField>