force-app/main/default/objects/Lot__c/fields/Builder__c.field-meta.xml
<CustomField>
    <fullName>Builder__c</fullName>
    <label>Builder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DR Horton</fullName>
                <default>true</default>
                <label>DR Horton</label>
            </value>
            <value>
                <fullName>Lennar</fullName>
            </value>
            <value>
                <fullName>Ryan Homes</fullName>
            </value>
            <value>
                <fullName>Yellowstone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>