force-app/main/default/objects/Lot__c/fields/Builder_Account__c.field-meta.xml
<CustomField>
    <fullName>Builder_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder Lots</relationshipLabel>
    <relationshipName>Builder_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>