force-app/main/default/objects/Lot__c/fields/Builder_Division__c.field-meta.xml
<CustomField>
    <fullName>Builder_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Builder Division account for this lot. Rolled up from Community or set directly.</description>
    <label>Builder Division</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lots</relationshipLabel>
    <relationshipName>Lots_By_Division</relationshipName>
    <type>Lookup</type>
</CustomField>