force-app/main/default/objects/Lot__c/fields/Builder_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Builder_PO_Number__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Builder PO Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>