force-app/main/default/objects/Lot__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>