force-app/main/default/objects/Lot__c/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>