force-app/main/default/objects/Lot__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Schema repair v3 2026-04-30</description>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Lots</relationshipLabel>
    <relationshipName>Lots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>