force-app/main/default/objects/Lot__c/fields/Community_Package__c.field-meta.xml
<CustomField>
    <fullName>Community_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The package assigned to this lot. Defaults from Community.Active_Community_Package__c. Override this when a specific lot has different scope than the community standard.</description>
    <label>Community Package</label>
    <referenceTo>Community_Package__c</referenceTo>
    <relationshipLabel>Lots</relationshipLabel>
    <relationshipName>Lots</relationshipName>
    <type>Lookup</type>
</CustomField>