force-app/main/default/objects/Lot__c/fields/Corner_Lot__c.field-meta.xml
<CustomField>
    <fullName>Corner_Lot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, use Community.Active_Corner_Package__c as the effective package instead of Active_Standard_Package__c.</description>
    <label>Corner Lot</label>
    <type>Checkbox</type>
</CustomField>