force-app/main/default/objects/Lot__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Geographic county name for this lot (e.g. Mecklenburg). Populated from Lot address or auto-derived via NWS Points API geocoding using Lot_Latitude__c and Lot_Longitude__c. Used for weather alert matching.</description>
    <label>County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>