force-app/main/default/objects/Lot__c/fields/Current_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Current_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Current Lot</relationshipLabel>
    <relationshipName>Current_Lot</relationshipName>
    <type>Lookup</type>
</CustomField>