force-app/main/default/objects/Lot__c/fields/Effective_Community_Package__c.field-meta.xml
<CustomField>
    <fullName>Effective_Community_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The active Community Package for this lot. Selected based on Corner_Lot__c flag from Community standard or corner package.</description>
    <label>Effective Community Package</label>
    <referenceTo>Community_Package__c</referenceTo>
    <relationshipLabel>Lots</relationshipLabel>
    <relationshipName>Lots_By_Package</relationshipName>
    <type>Lookup</type>
</CustomField>