force-app/main/default/objects/Lot__c/fields/Eight11_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Eight11_Task_Status__c</fullName>
    <description>Current 811 utility locate status for this Lot. Derived from the related Takeoff Task (Eight11_Status__c on Takeoff_Task__c where Task_Type = 811 Call). Updated by flow when Takeoff Task 811 status changes. Display-only on Lot — source of truth is Takeoff_Task__c.</description>
    <label>811 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Filed</fullName>
            </value>
            <value>
                <fullName>Filed</fullName>
            </value>
            <value>
                <fullName>Pending Locate</fullName>
            </value>
            <value>
                <fullName>Marked</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>