force-app/main/default/objects/Lot__c/fields/Final_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Inspection_Date__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Final Inspection Date</label>
    <type>Date</type>
</CustomField>