force-app/main/default/objects/Lot__c/fields/FJ_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>FJ_Scheduled_Date__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>FJ Scheduled Date</label>
    <type>Date</type>
</CustomField>