force-app/main/default/objects/Lot__c/fields/Frame_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Frame_Complete_Date__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Frame Complete Date</label>
    <type>Date</type>
</CustomField>