force-app/main/default/objects/Lot__c/fields/GPS_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coordinates__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(Lot_Latitude__c),
    ISBLANK(Lot_Longitude__c),
    AND(Lot_Latitude__c = 0, Lot_Longitude__c = 0)
  ),
  &quot;&quot;,
  TEXT(Lot_Latitude__c) &amp; &quot;, &quot; &amp; TEXT(Lot_Longitude__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPS Coordinates</label>
    <type>Text</type>
</CustomField>