force-app/main/default/objects/Lot__c/fields/Has_Open_FJ__c.field-meta.xml
<CustomField>
    <fullName>Has_Open_FJ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Schema repair v3 2026-04-30</description>
    <inlineHelpText>Maintained by Flow/Apex when a Finish Job is opened or closed for this Lot.</inlineHelpText>
    <label>Has Open FJ</label>
    <type>Checkbox</type>
</CustomField>