force-app/main/default/objects/Lot__c/fields/Lawn_Care_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lawn_Care_Start_Date__c</fullName>
    <description>Date when recurring lawn care service began for this lot.</description>
    <label>Lawn Care Start Date</label>
    <type>Date</type>
</CustomField>