force-app/main/default/objects/Lot__c/fields/LC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LC_Start_Date__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>LC Start Date</label>
    <type>Date</type>
</CustomField>