force-app/main/default/objects/Lot__c/fields/Lot_Layout_Attached__c.field-meta.xml
<CustomField>
    <fullName>Lot_Layout_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the lot-specific layout/plat file is attached and ready for production work.</description>
    <label>Lot Layout Attached</label>
    <type>Checkbox</type>
</CustomField>