force-app/main/default/objects/Lot__c/fields/Lot_Layout_Link__c.field-meta.xml
<CustomField>
    <fullName>Lot_Layout_Link__c</fullName>
    <description>Direct link to the lot layout, plat, or PDF used by takeoff and production scheduling.</description>
    <label>Lot Layout Link</label>
    <type>Url</type>
</CustomField>