force-app/main/default/objects/Lot__c/fields/Lot_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Lot_Longitude__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Lot Longitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>