force-app/main/default/objects/Lot__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <description>Builder lot number</description>
    <label>Lot Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>