force-app/main/default/objects/Lot__c/fields/Lot_Readiness_Pct__c.field-meta.xml
<CustomField>
    <fullName>Lot_Readiness_Pct__c</fullName>
    <formula>(IF(Lot_Layout_Attached__c, 1, 0) + IF(AND(NOT(ISBLANK(Lot_Latitude__c)), NOT(ISBLANK(Lot_Longitude__c)), NOT(AND(Lot_Latitude__c = 0, Lot_Longitude__c = 0))), 1, 0) + IF(NOT(ISBLANK(Takeoff_Approved_Date__c)), 1, 0) + IF(PO_Validated__c, 1, 0)) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lot Readiness %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>