force-app/main/default/objects/Lot__c/fields/Lot_Status__c.field-meta.xml
<CustomField>
    <fullName>Lot_Status__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Lot Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>PO Received</fullName>
            </value>
            <value>
                <fullName>Pending Takeoff</fullName>
            </value>
            <value>
                <fullName>Takeoff Scheduled</fullName>
            </value>
            <value>
                <fullName>Clear for Schedule</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Closeout</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>