force-app/main/default/objects/Lot__c/fields/Package_Override__c.field-meta.xml
<CustomField>
    <fullName>Package_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this lot has a different package than the community standard. Requires Package_Override_Notes__c to be populated.</description>
    <label>Package Override</label>
    <type>Checkbox</type>
</CustomField>