force-app/main/default/objects/Lot__c/fields/Package_Override_Notes__c.field-meta.xml
<CustomField>
    <fullName>Package_Override_Notes__c</fullName>
    <description>Required when Package_Override__c is true. Explains why this lot&apos;s package differs from the community standard.</description>
    <label>Package Override Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>