force-app/main/default/objects/Lot__c/fields/Parent_Builder_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Builder_Account__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <formula>Community__r.Builder_Account__r.Parent.Name</formula>
    <inlineHelpText>Auto-populated from Community Division Parent.</inlineHelpText>
    <label>Parent Builder</label>
    <type>Text</type>
</CustomField>