force-app/main/default/objects/Lot__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Phase</label>
    <length>20</length>
    <type>Text</type>
</CustomField>