force-app/main/default/objects/Lot__c/fields/Pipeline_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Bucket__c</fullName>
    <label>Pipeline Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Scheduling</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Takeoff Complete</fullName>
            </value>
            <value>
                <fullName>Site Ready</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>QI</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Ready to Invoice</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>90+ Days</fullName>
                <isActive>false</isActive>
                <label>90+ Days</label>
            </value>
            <value>
                <fullName>60+ Days</fullName>
                <isActive>false</isActive>
                <label>60+ Days</label>
            </value>
            <value>
                <fullName>31 Days</fullName>
                <isActive>false</isActive>
                <label>31 Days</label>
            </value>
            <value>
                <fullName>30 Days</fullName>
                <isActive>false</isActive>
                <label>30 Days</label>
            </value>
            <value>
                <fullName>15 Days</fullName>
                <isActive>false</isActive>
                <label>15 Days</label>
            </value>
            <value>
                <fullName>Pending Takeoff</fullName>
                <isActive>false</isActive>
                <label>Pending Takeoff</label>
            </value>
            <value>
                <fullName>Clear for Schedule</fullName>
                <isActive>false</isActive>
                <label>Clear for Schedule</label>
            </value>
            <value>
                <fullName>Pending Closeout</fullName>
                <isActive>false</isActive>
                <label>Pending Closeout</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>