force-app/main/default/objects/Lot__c/fields/Plan_Model__c.field-meta.xml
<CustomField>
    <fullName>Plan_Model__c</fullName>
    <description>Builder plan or model designation for this lot (e.g., Fairfax, Madison, etc.). Used for scope variation identification.</description>
    <label>Plan / Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>