force-app/main/default/objects/Lot__c/fields/Plant_Package__c.field-meta.xml
<CustomField>
    <fullName>Plant_Package__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Plant Package</label>
    <length>80</length>
    <type>Text</type>
</CustomField>