force-app/main/default/objects/Lot__c/fields/PO_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Received_Date__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>PO Received Date</label>
    <type>Date</type>
</CustomField>