force-app/main/default/objects/Lot__c/fields/PO_Validated__c.field-meta.xml
<CustomField>
    <fullName>PO_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the Builder PO for this lot has been reviewed and is valid for takeoff/work generation.</description>
    <label>PO Validated</label>
    <type>Checkbox</type>
</CustomField>