force-app/main/default/objects/Lot__c/fields/Shrubs__c.field-meta.xml
<CustomField>
    <fullName>Shrubs__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Shrubs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>