force-app/main/default/objects/Lot__c/fields/Sod_SF__c.field-meta.xml
<CustomField>
    <fullName>Sod_SF__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Sod Sqft</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>