force-app/main/default/objects/Lot__c/fields/Spec_Type__c.field-meta.xml
<CustomField>
    <fullName>Spec_Type__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Spec Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
                <label>Exact (Lennar)</label>
            </value>
            <value>
                <fullName>Flexible</fullName>
                <label>Flexible (Ryan)</label>
            </value>
            <value>
                <fullName>Average</fullName>
                <label>Average (DRH)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>