force-app/main/default/objects/Lot__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>