force-app/main/default/objects/Lot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Production</fullName>
            </value>
            <value>
                <fullName>FJ Open</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <isActive>false</isActive>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Sold</fullName>
                <isActive>false</isActive>
                <label>Sold</label>
            </value>
            <value>
                <fullName>Warranty</fullName>
                <isActive>false</isActive>
                <label>Warranty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>