force-app/main/default/objects/Lot__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Street Address</label>
    <length>120</length>
    <type>Text</type>
</CustomField>