force-app/main/default/objects/Lot__c/fields/Takeoff_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Approved_Date__c</fullName>
    <description>Date the lot takeoff was approved for production release.</description>
    <label>Takeoff Approved Date</label>
    <type>Date</type>
</CustomField>